--- a/assets/ui/index.html
+++ b/assets/ui/index.html
@@ -1,7 +1,28 @@
 <!--
-This is a basic boilerplate example of how to implement simple game UI,
-and also configure additional buttons for mobile compatibility.
+  Game UI: HUD (shards, round, countdown, feed, toasts) + mobile controls.
+  Simulator: T = shard award, R = cycle round status.
 -->
+<link rel="stylesheet" href="hud.css" />
+
+<div id="hud-root" class="hud">
+  <div class="hud-top">
+    <div class="hud-shards">
+      <span class="hud-shards-icon" aria-hidden="true">◆</span>
+      <span class="hud-shards-value">0</span>
+    </div>
+    <div class="hud-round-wrap">
+      <div class="hud-round">
+        <span class="hud-round-num">Round 1</span>
+        <span class="hud-round-status running">RUNNING</span>
+      </div>
+    </div>
+    <div class="hud-countdown-wrap">
+      <div class="hud-countdown hidden">0s</div>
+    </div>
+  </div>
+  <div class="hud-feed"></div>
+  <div class="hud-toast-stack"></div>
+</div>
 
 <div id="ping-debug" class="ping-debug"></div>
 
@@ -13,6 +34,8 @@ and also configure additional buttons for mobile compatibility.
     }
   });
 </script>
+
+<script src="hud.js"></script>
 
 <script>
   // Handle interact button touch / untouch
