--- a/assets/ui/index.html
+++ b/assets/ui/index.html
@@ -41,6 +41,8 @@
         <div class="hud-health hidden" id="hud-health" aria-label="Health">
           <span class="hud-health-value" id="hud-health-value">100</span>
         </div>
+
+        <div class="hud-buffs" id="hud-buffs" aria-label="Active power-up buffs"></div>
       </div>
 
       <!-- Center: Round -->
